# testing

./: .gitignore  bandit_report.json  communicate.py  main.py  run_bandit_and_notify.py  run_security_checks.py  run_security_checks_1.py
elsai-chat-history/: package.sh  package_chat_history.sh  pyproject.toml
elsai-chat-history/elsai_chat_history/: __init__.py
elsai-chat-history/elsai_chat_history/config/: loggerConfig.py
elsai-chat-history/elsai_chat_history/manager/: __init__.py  chat_manager.py  chat_manager_implementation.py
elsai-chat-history/elsai_chat_history/models/: message.py
elsai-chat-history/elsai_chat_history/stores/: __init__.py  base.py  json_store.py  json_store_implementation.py  memory_store.py  memory_store_implementation.py  postgres_implementation.py  postgres_store.py  sqlite_store.py  sqlite_store_implementation.py
elsai-chat-history/elsai_chat_history/strategies/: __init__.py  base.py  summarization.py  summarization_implementation.py  trimming.py  trimming_implementation.py
elsai-chat-history/elsai_chat_history/utils/: __init__.py  serialization.py  serialization_implementation.py  token_counter.py  token_counter_implementation.py
elsai-chat-history/package/: MANIFEST.in  README.md  setup.py
elsai-connectors-cloud/: package.sh  package_elsai_cloud.sh  pyproject.toml
elsai-connectors-cloud/elsai_cloud/aws/: __init__.py  aws_s3.py  implementation.py
elsai-connectors-cloud/elsai_cloud/azureblobstorage/: __init__.py  azure_blob_storage.py  implementation.py
elsai-connectors-cloud/elsai_cloud/config/: __init__.py  loggerConfig.py  sharepoint_auth_service.py
elsai-connectors-cloud/elsai_cloud/elastic_search/: __init__.py  elastic_search_connector.py  implementation.py
elsai-connectors-cloud/elsai_cloud/microsoft_webhooks/: __init__.py  implementation.py  msgraph_webhooks.py
elsai-connectors-cloud/elsai_cloud/onedrive/: __init__.py  implementation.py  onedrive_service.py
elsai-connectors-cloud/elsai_cloud/sharepoint/: __init__.py  implementation.py  sharepoint_service.py
elsai-connectors-cloud/package/: LICENSE  MANIFEST.in  README.md  setup.py
elsai-connectors-db/: package.sh  package_connectors_db.sh  pyproject.toml
elsai-connectors-db/elsai_db/config/: __init__.py  base_sql_connector.py  dialects.py
elsai-connectors-db/elsai_db/mysql/: __init__.py  implementation.py  mysql_sql_connector.py
elsai-connectors-db/elsai_db/odbc_mysql/: __init__.py  implementation.py  odbcmysql_connector.py
elsai-connectors-db/elsai_db/odbc_postgres/: __init__.py  implementation.py  odbcpostgresql_connector.py
elsai-connectors-db/elsai_db/postgres/: __init__.py  implementation.py  postgresql_connector.py
elsai-connectors-db/elsai_db/sqlite/: __init__.py  implementation.py  sqlite_connector.py
elsai-connectors-db/package/: MANIFEST.in  README.md  setup.py
elsai-embeddings/: package.sh  (+2 more)
elsai-model/: package.sh  pyproject.toml
elsai-model/elsai_model/azure_openai/: __init__.py  azure_openai_connector.py  implementation.py
elsai-model/elsai_model/bedrock/: __init__.py  bedrock_connector.py  implementation.py
elsai-model/elsai_model/config/: __init__.py
elsai-model/elsai_model/openai/: implementation.py  openai_connector.py
elsai-model/package/: MANIFEST.in  README.md  setup.py
elsai-nli/: package.sh  package_elsai_nli.sh  pyproject.toml
elsai-nli/elsai_nli/natural_language_interface/: csv_agent_handler.py  implementation.py
elsai-nli/package/: MANIFEST.in  README.md  setup.py
elsai-ocr-extractors/: package.sh  pyproject.toml
elsai-ocr-extractors/elsai_ocr_extractors/awstextract/: __init__.py  aws_textract_service.py  implementation.py
elsai-ocr-extractors/elsai_ocr_extractors/azure_cognitive_service/: __init__.py  azure_cognitive_service.py  implementation.py
elsai-ocr-extractors/elsai_ocr_extractors/azure_document_intelligence/: __init__.py  azure_document_intelligence.py  implementation.py
elsai-ocr-extractors/elsai_ocr_extractors/config/: __init__.py  loggerConfig.py
elsai-ocr-extractors/elsai_ocr_extractors/llama_parse_extractor/: __init__.py  implementation.py  llama_parse_extractor.py
elsai-ocr-extractors/elsai_ocr_extractors/visionai_extractor/: __init__.py  implementation.py  visionai_extractor.py
elsai-ocr-extractors/package/: MANIFEST.in  README.md  setup.py
elsai-prompts/: package.sh  package_elsai_prompts.sh  pyproject.toml
elsai-prompts/elsai_prompts/pezzo/: __init__.py  implementation.py  pezzo_prompt_renderer.py
elsai-prompts/package/: MANIFEST.in  README.md  setup.py
elsai-retrievers/: package.sh  package_elsai_retrievers.sh  pyproject.toml
elsai-retrievers/elsai_retrievers/config/: __init__.py
elsai-retrievers/elsai_retrievers/hybrid_retriever/: hybrid_retriever.py  implementation.py
elsai-retrievers/package/: MANIFEST.in  README.md  setup.py
elsai-stt/: package.sh  package_elsai_stt.sh  pyproject.toml
elsai-stt/package/: MANIFEST.in  README.md  setup.py
elsai-text-extractor/: package.sh  pyproject.toml
elsai-text-extractor/elsai_text_extractors/: sonar-project.properties
elsai-text-extractor/elsai_text_extractors/csv_extractor/: __init__.py  csv_file_extractor.py  implementation.py
elsai-text-extractor/elsai_text_extractors/docx_extractor/: __init__.py  docx_text_extractor.py  implementation.py
elsai-text-extractor/elsai_text_extractors/pypdfloader/: __init__.py  implementation.py  pypdfloader.py
elsai-text-extractor/elsai_text_extractors/unstructured_excel_loader/: __init__.py  implementation.py  unstructured_excel_loader_service.py
elsai-text-extractor/package/: MANIFEST.in  README.md  setup.py
elsai-text-extractor/tests/: test_csv_file_extractor.py  test_docx_extractor.py  test_pypdfloader.py  test_unstructured_excel_loader.py
elsai-utilities/: package.sh  package_elsai_utilities.sh  pyproject.toml
elsai-utilities/.github/workflows/: packages.yml
elsai-utilities/package/: MANIFEST.in  README.md  setup.py
elsai-vectordb/: package.sh  package_elsai_vectordb.sh  pyproject.toml
elsai-vectordb/package/: MANIFEST.in  README.md  setup.py
(+33 files in other folders)
