[project]
name = "elsai-chat-history"
version = "0.1.0"
description = ""
authors = [
    {name = "abhinivesh0305",email = "abhinivesh.s@optisolbusiness.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "annotated-types ==0.7.0",
    "asttokens ==3.0.0",
    "asyncpg ==0.30.0",
    "comm ==0.2.2",
    "debugpy ==1.8.14",
    "decorator ==5.2.1",
    "executing ==2.2.0",
    "ipykernel ==6.29.5",
    "ipython ==9.3.0",
    "ipython_pygments_lexers ==1.1.1",
    "jedi ==0.19.2",
    "jupyter_client ==8.6.3",
    "jupyter_core ==5.8.1",
    "matplotlib-inline ==0.1.7",
    "nest-asyncio ==1.6.0",
    "packaging >=23.2, <25",
    "parso ==0.8.4",
    "pexpect ==4.9.0",
    "platformdirs ==4.3.8",
    "prompt_toolkit ==3.0.51",
    "psutil ==7.0.0",
    "ptyprocess ==0.7.0",
    "pure_eval ==0.2.3",
    "pydantic ==2.11.7",
    "pydantic_core ==2.33.2",
    "Pygments ==2.19.1",
    "python-dateutil ==2.9.0.post0",
    "pyzmq ==27.0.0",
    "six ==1.17.0",
    "stack-data ==0.6.3",
    "tornado ==6.5.1",
    "traitlets ==5.14.3",
    "typing-inspection ==0.4.1",
    "typing_extensions ==4.14.0",
    "wcwidth ==0.2.13"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
