[project]
name = "elsai-cloud"
version = "0.1.0"
description = ""
authors = [
    {name = "abhinivesh0305",email = "abhinivesh.s@optisolbusiness.com"}
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "boto3 (>=1.38.30,<2.0.0)",
    "elasticsearch (>=9.0.2,<10.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
