[project]
name = "elsai-db"
version = "0.1.0"
description = ""
authors = [
    {name = "abhinivesh0305",email = "abhinivesh.s@optisolbusiness.com"}
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "elasticsearch (>=9.0.2,<10.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"

 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
