[project]
name = "elsai-nli"
version = "0.1.0"
description = ""
authors = [
    {name = "abhinivesh0305",email = "abhinivesh.s@optisolbusiness.com"}
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
